2003-07-03  Thorsten Jordan <thorsten_jordan@gmx.de>
	* menu.h menu.cpp
	  - improved menu design and input
	* model.h model.cpp
	  - faster model drawing using OpenGL features
	* vector2.h vector2.cpp vector3.h vector3.cpp
	  - changed classes to templates.
	* smoke_stream.* ship.*
	  - introduced smoke streams caused by ships (experimental)
	* all over the place
	  - changed text handling to new model
	  - many miscellaneous changes (new clouds test, ...)

2003-07-02  Markus Petermann  <m.petermann@gmx.net>
	* game.cpp: When a ship is sunk the right text is choosed now.
	* submarine_interface.cpp: When a submarine launches a torpedo the
	  right text is choosed now.

2003-06-16  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface, submarine_interface, ship_interface
	  - moved damage related data directly to class submarine
	  - made display_damage_status() in user_interface abstract, moved
	    code to submarine_interface, where it belongs.
	  - introduced icons showing damage status.

2003-06-11  Thorsten Jordan <thorsten_jordan@gmx.de>
	* released version 0.0.10 and updated version number to 0.0.11

2003-06-07  Thorsten Jordan <thorsten_jordan@gmx.de>
	* shifted damage display to own class, some adds.

2003-05-31  Markus Petermann  <m.petermann@gmx.net>
	* date.h:
	  - Month october added.
	
2003-05-30  Thorsten Jordan <thorsten_jordan@gmx.de>

	* global_data.h, global_data.cpp
	  - introduced image making. Maybe we should use SDL-mm?
	* user_interface.h, user_interface.cpp
	  - display of background image as a start.
	    this should move to submarine_interface.cpp later
	    Maybe we should load images on demand when switching screens?
	    Or keeping them in system memory and copying them when switching
	    screens? This would save a lot of graphic memory.

2003-05-14  Markus Petermann  <m.petermann@gmx.net>

	* submarine_VII.cpp, submarine_XXI.cpp:
	  - Fuel and battery consumption factors modified: The original t values where